2010-06-07  Jaroslav Hajek  <highegg@gmail.com>

	* pkg/get_forge_pkg.m: New function.
	* pkg/module.mk: Add it here.
	* pkg/pkg.m: Support -forge switch for auto-downloading OctaveForge
	packages.

2010-06-03  Alois Schlögl

        * signal/arch_test.m, statistics/tests/bartlett_test.m, 
        statistics/tests/chisquare_test_homogeneity.m, 
        statistics/tests/chisquare_test_independence.m, 
        statistics/tests/manova.m, statistics/tests/mcnemar_test.m, 
        statistics/tests/run_test.m, statistics/distributions/chi2pdf.m: 
        Replace calls to obsolete chisquare_cdf with chi2cdf.

2010-06-03  Rik <octave@nomad.inbox5.com>

	* plot/private/__plt__.m: Add newline to usage message.

2010-06-02  Rik <octave@nomad.inbox5.com>

	* optimization/sqp.m: Overhaul sqp code.
        Guarantee equivalent results if sqp called with or wihout bounds 
        (bug #29989).  Simplify input option handling and add %tests
        to check validation code.  Rewrite documentation string.

2010-06-01  Rik <octave@nomad.inbox5.com>

	* optimization/fminbnd.m: Remove unused persistent variable.

2010-06-01  Rik <octave@nomad.inbox5.com>

	* plot/private/__contour__.m: Correctly size X and Y when only Z
        specified (bug #30002).

2010-05-31  Rik <octave@nomad.inbox5.com>

	* specfun/legendre.m: Orient row vector correctly (bug #29997).
        Add input validation for negative values and %tests to check
        validation routines.

2010-05-30  Rik <octave@nomad.inbox5.com>
        
        * sparse/svds.m: Overhaul code.  
        Return smallest singular values if sigma == 0 (Bug #29721).
        Avoid calculating U and V matrices unless requested.
        Correctly handle zero matrix input.
        Improve documentation string.

2010-05-26  Rik <octave@nomad.inbox5.com>

        * statistics/base/histc.m, statistics/base/iqr.m, 
        statistics/base/kurtosis.m, statistics/base/mode.m, 
        statistics/base/ranks.m, statistics/base/run_count.m, 